# redclock

./: app.py  pyproject.toml  redclock.py  redclock_ui.py  requirements.txt
apps/: base.py  manage.py  timer.py  work.py
gui/: redclock.ui
gui/icons/: clock_red.icns
scripts/: poetry_install.sh
