[tool.poetry]
name = "redclock"
version = "0.1.0"
description = "A workperiod timer for redmine projects"
authors = ["sverholen <sverholen@gmail.com>"]
license = "GPL v2"

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.23"
SQLAlchemy-Utils = "^0.37.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
